objects/SFPS_GNC_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Get Next Case Hierarchy Settings</description>
    <fields>
        <fullName>SBR_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFPS_GNC Settings, Enable Skill Based Routing. When this setting is disabled, settings from other SBR setting fields are discarded</description>
        <label>SBR Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBR_Include_Unspecified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFPS_GNC setting, include &apos;Unspecified&apos; skill in pulling cases</description>
        <label>SBR Include Unspecified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBR_Skill_Object__c</fullName>
        <label>SBR Skill Object</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SFPS GNC Settings</label>
</CustomObject>